# rbt-data-generator

./: .dockerignore  .gitignore  .hadolint.yaml  .shellcheckrc  .sqlfluff  ATTRIBUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.production  Dockerfile.setup  README.md  SECURITY.md  docker-compose.yml  env.example  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_quality.yml  feature_request.yml
.github/scripts/: check_gns_header.py  tilestats.py
.github/workflows/: ci.yml  docs.yml  nightly.yml
charts/rbt-data-generator/: .helmignore  Chart.yaml  README.md  values-dev-smoke.yaml  values-production.yaml  values.schema.json  values.yaml
charts/rbt-data-generator/files/: postgresql.conf  tile-server.json
charts/rbt-data-generator/templates/: NOTES.txt  _helpers.tpl  cache-pvcs.yaml  configmap-env.yaml  configmap-postgresql.yaml  configmap-prometheus.yaml  output-pvc.yaml  (+15 more)
config/: layers.yml  postgresql.conf  prometheus.yml  rbt.conf
docs/: architecture.md  cli.md  configuration.md  cultural-layers.md  data-sources.md  database-initialization.md  database-schema.md  duckdb-buildings.md  getting-started.md  helm.md  index.md  installation.md  mapproxy_openapi.yaml  operations.md  osm-import.md  parity-runbook.md  performance.md  physical-layers.md  production-readme.md  project-structure.md  scripts-lib-readme.md  setup-readme.md  tileserver_openapi.yaml  troubleshooting.md
docs/_hooks/: gen_cli_reference.py
docs/api/: mapproxy-api.md  tileserver-api.md
production/: README.md  generate-tiles.sh  update-osm.sh
scripts/lib/: README.md  config.sh
setup/: README.md  init-database.sh
src/rbt/: __init__.py  bash.py  checks.py  cli.py  config.py  layers.py  logging.py  paths.py  process.py  schema.py  setup_db.py
tests/: conftest.py  parity_support.py  test_bash_delegate.py  test_btis.py  test_chart_parity.py  test_checks.py  test_cli.py  test_cli_commands.py  test_cli_tiles.py  test_config.py  test_config_env.py  test_config_expansion.py  test_engine.py  test_export_buildings.py  test_exporter.py  test_gdal_mvt.py  test_import_buildings.py  test_import_geonames.py  test_import_osm.py  test_import_reference.py  test_importer_stubs.py  test_layers.py  test_logging.py  test_osm_run.py  test_parity_bash_native.py  test_parity_golden.py  test_parity_parsing.py  test_paths.py  test_process.py  test_schema.py  test_setup.py  test_tile_join.py  test_tippecanoe.py  test_tippecanoe_golden.py
tests/fixtures/: README.md  liechtenstein-20260702.osm.pbf  seed_building.sql  seed_reference_stubs.sql  seed_water.sql
tools/: README.md  duckdb-building-export.sql  health-check.sh  overture_building_processing.sh  smoke-test.sh  validate-environment.sh
(+45 files in other folders)
